--- a/Demo_Employee/Demo_Employee/Views/Home/Index.cshtml
+++ b/Demo_Employee/Demo_Employee/Views/Home/Index.cshtml
@@ -1,24 +1,36 @@
-﻿<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS, and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>ASP.NET Web API is a framework that makes it easy to build HTTP services that reach
-        a broad range of clients, including browsers and mobile devices. ASP.NET Web API
-        is an ideal platform for building RESTful applications on the .NET Framework.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301870">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301871">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301872">Learn more &raquo;</a></p>
-    </div>
-</div>
+﻿@model IEnumerable<Demo_Employee.Models.Employee>
+    @{ 
+        ViewData["Title"] = "Home Page";
+    }
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>Sr No.</th>
+            <th>Employee Name</th>
+            <th>City</th>
+            <th>State</th>
+            <th>country</th>
+            <th>Department</th>
+            <th>Actions</th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach(var item in Model)
+        {
+            <tr>
+                <td>@item.Sr_no</td>
+                <td>@item.Em_name</td>
+                <td>@item.City</td>
+                <td>@item.STATE</td>
+                <td>@item.Country</td>
+                <td>@item.Department</td>
+
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Sr_no">Edit</a>
+                    <a asp-action="Delete" asp-route-id="@item.Sr_no">Delete</a>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
